# Cardex

./: README.md  docker-compose.yml  pyproject.toml
app/: pyproject.toml
src/cardex/: db.py
src/cardex.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/cardex/catalogue/: repository.py  sync.py
src/cardex/collection/: repository.py  service.py  storage.py
src/cardex/vision/: features.py  homography.py
src/cardex/web/: Dockerfile  __init__.py  routes.py
src/cardex/worker/: Dockerfile  __main__.py
